# MPRVIS

./: .travis.yml  Cargo.toml
assets/: gui.css  gui.glade
src/: lib.rs
src/art/: fetcher.rs  mod.rs
src/gui/: mod.rs
src/metadata/: mod.rs
src/mpris/: mod.rs
